update scope names
