# src/main/kotlin/com/wutsi/platform/sms/dto/SendVerificationRequest.kt
@@ -1,6 +1,10 @@
 package com.wutsi.platform.sms.dto
 
+import javax.validation.constraints.Size
+import kotlin.String
+
 public data class SendVerificationRequest(
     public val phoneNumber: String = "",
-    public val locale: String = "en"
+    @get:Size(max = 2)
+    public val language: String = "en"
 )
